--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -56,7 +56,7 @@ jobs:
           HUGO_ENVIRONMENT: production
           TZ: America/Los_Angeles
         run: |
-          cd docs \
+          cd docs
           hugo \
             --gc \
             --minify \
